--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <title>My second github ripo</title>
 </head>
 <body>
-    <h1>My name is Mubin</h1>
+    <h1>Myself</h1>
+    <h2>My name is mubin Iftikhar. </h2>
+    <h2>Now i can push code in github</h2>
 </body>
 </html>
