--- a/index.html
+++ b/index.html
@@ -12,5 +12,6 @@
     <h2>Now i can push code in github</h2>
     <p>This is my first git hub push.</p>
     <p>Now i am coding coding and codeing.</p>
+    <img src="205-2053693_download-mosque-png-clipart-al-masjid-al-nabawi (2).png" alt="">
 </body>
 </html>
